--- a/index.html
+++ b/index.html
@@ -8,40 +8,41 @@
 </head>
 <body>
     <input type="checkbox" id="popup" class="popup-toggle">
-    <div class="popup">
-        <label for="popup" class="popup-close-background"></label>
-        <div class="popup-content">
-            <h2 class="heading">Ваш фидбек</h2>
-            <div class="frequency-poll">
-                <span class="frequency-poll-hint popup-hint">Как часто вы заходите на сайт?</span>
-                <select class="frequency-poll-select">
-                    <option selected>Почти каждый день</option>
-                    <option>Раз в несколько дней</option>
-                    <option>Раз в несколько недель</option>
-                    <option>Несколько раз в год</option>
-                </select>
+    <div class="popup visually-hidden">
+        <form action="" class="form-container">
+            <label for="popup" class="popup-close-background"></label>
+            <div class="popup-content">
+                <h2 class="heading">Ваш фидбек</h2>
+                <div class="frequency-poll">
+                    <span class="frequency-poll-hint popup-hint">Как часто вы заходите на сайт?</span>
+                    <select class="frequency-poll-select">
+                        <option selected>Почти каждый день</option>
+                        <option>Раз в несколько дней</option>
+                        <option>Раз в несколько недель</option>
+                        <option>Несколько раз в год</option>
+                    </select>
+                </div>
+                <div class="mailing-poll">
+                    <span class="mailing-poll-hint popup-hint">Вы подписаны на e-mail рассылку?</span>
+                    <label class="mailing-poll-radio-group">
+                        <input type="radio" name="mailing-poll-radio" class="mailing-poll-radio" checked="checked">
+                        <span class="mailing-poll-radio-text">Да</span> 
+                    </label>
+                    <label class="mailing-poll-radio-group">
+                        <input type="radio" name="mailing-poll-radio" class="mailing-poll-radio">
+                        <span class="mailing-poll-radio-text">Нет</span> 
+                    </label>
+                </div>
+                <div class="preference-poll">
+                    <label for="preference-poll-hint" class="preference-poll-hint popup-hint">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</label>
+                    <textarea name="preferences" id="preference-poll-hint" cols="30" rows="10" class="preference-poll-text-field">Может, больше рецептов?</textarea>
+                </div>
+                <div class="popup-form-actions">
+                    <button class="popup-button button-submit" type="submit">Отправить</button>
+                </div>
+                <label for="popup" class="popup-close"><span class="popup-close-text">close</span></label>
             </div>
-            <div class="mailing-poll">
-                <span class="mailing-poll-hint popup-hint">Вы подписаны на e-mail рассылку?</span>
-                <label class="mailing-poll-radio-group">
-                    <input type="radio" name="mailing-poll-radio" class="mailing-poll-radio" checked="checked">
-                    <span class="mailing-poll-radio-text">Да</span> 
-                </label>
-                <label class="mailing-poll-radio-group">
-                    <input type="radio" name="mailing-poll-radio" class="mailing-poll-radio">
-                    <span class="mailing-poll-radio-text">Нет</span> 
-                </label>
-            </div>
-            <div class="preference-poll">
-                <label for="preference-poll-hint" class="preference-poll-hint popup-hint">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</label>
-                <textarea name="preferences" id="preference-poll-hint" cols="30" rows="10" class="preference-poll-text-field">Может, больше рецептов?</textarea>
-            </div>
-            <div class="popup-form-actions">
-                <button class="popup-button button-submit" type="submit">Отправить</button>
-            </div>
-            <label for="popup" class="popup-close"><span class="popup-close-text">close</span></label>
-            
-        </div>
+        </form>
     </div>
     <header class="header">
         <div class="header-background">
@@ -285,7 +286,8 @@
                     </section>
                     <div class="search">
                         <form>
-                            <input type="text" placeholder="Найти...">
+                            <label for="search" class="visually-hidden">Поиск по сайту</label>
+                            <input id="search" type="text" placeholder="Найти...">
                             <button type="submit" class="search-button"><span class="search-button-text">Поиск</span></button>
                         </form>
                     </div>
@@ -293,7 +295,8 @@
                         <h3 class="sidebar-heading">Рассылка</h3>
                         <form action="#" class="sidebar-form-mailing">
                             <div class="mailing-form-group">
-                                <input type="email" class="mailing-field" placeholder="Ваш email-адрес" required>
+                                <label for="email" class="visually-hidden">Введите email</label>
+                                <input id="email" type="email" class="mailing-field" placeholder="Ваш email-адрес" required>
                             </div>
                             <div class="mailing-form-actions">
                                 <button class="mailing-button button-submit" type="submit">Подписаться</button>
@@ -398,9 +401,9 @@
             <div class="footer">
                 <address class="social-media-contacts">
                     <ul class="social-media-list">
-                        <li class="social-media-list-item"><a href="#" class="social-media-link social-media-dribbble"><span class="social-media-link-text">dribbble</span></a></li>
-                        <li class="social-media-list-item"><a href="#" class="social-media-link social-media-pinterest"><span class="social-media-link-text">pinterest</span></a></li>
-                        <li class="social-media-list-item"><a href="#" class="social-media-link social-media-tumblr"><span class="social-media-link-text">tumblr</span></a></li>
+                        <li class="social-media-list-item"><a href="#" class="social-media-link social-media-dribbble"><span class="social-media-link-text visually-hidden">dribbble</span></a></li>
+                        <li class="social-media-list-item"><a href="#" class="social-media-link social-media-pinterest"><span class="social-media-link-text visually-hidden">pinterest</span></a></li>
+                        <li class="social-media-list-item"><a href="#" class="social-media-link social-media-tumblr"><span class="social-media-link-text visually-hidden">tumblr</span></a></li>
                     </ul>
                 </address>
                 <div class="copiright">Copyright © 2009–2019 City Blog LLC.</div>
